2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |event-source| renamed as |eventsource| (HTML5 revision
	1863).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Uppercase attribute names for embed elements
	are disallowed (HTML5 revision 1946).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |embed| custom attributes and |data-*| attributes
	must be XML compatible (HTML5 revision 1836).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: All HTML elements can have xmlns="" attributes (HTML5
	revision 1834).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Requires non-empty title="" for rel="alternate stylesheet"
	link elements (HTML5 revision 1942).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Support for the |bb| element (HTML5 revision 1894).
	|irrelevant| renamed as |hidden| (HTML5 revision 2119).

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Element status updated.

2008-08-31  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: <embed> without src="" is conforming (HTML5
	revision 1929).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: @autosubmit dropped (HTML5 revision 2019).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: Use White_Space instead of Zs for date or time
	string in content (HTML5 revision 2094).  Make "YYYY-MM-DDHH:MM" (that
	misses a white space or "T" literal between day and hour) 
	not raise two errors.

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm: |xml:lang| attribute value must be same
	as |lang| attribute value for HTML elements (HTML5 revision 2062
	and so on).  |lang| attribute in XML document is no longer
	disallowed (HTML5 revision 2062).  |xml:lang| is allowed
	in HTML document (HTML5 revision 2062 and so on).

2008-08-30  Wakaba  <wakaba@suika.fam.cx>

	* Atom.pm: s/element missing/child element missing/ for
	consistency.

	* HTML.pm: Typos fixed.
	(pre): "No significant content" error was unintentionally
	disabled.  s/element missing/child element missing/ for