@@ -1,3 +1,8 @@
+2008-09-04  Wakaba  <wakaba@suika.fam.cx>
+
+	* HTML.pm: WF2 content model, contexts, attributes/elements
+	status are updated. (HTML5 revision 2142-2152).
+
 2008-08-31  Wakaba  <wakaba@suika.fam.cx>
 
 	* HTML.pm: |event-source| renamed as |eventsource| (HTML5 revision
